source/blender/freestyle/intern/system/RenderMonitor.h
@@ -48,6 +48,21 @@ public:
 
 	virtual ~RenderMonitor() {}
 
+	inline void setInfo(string info)
+	{
+		if (_re && !info.empty()) {
+			_re->i.infostr = info.c_str();
+			_re->stats_draw(_re->sdh, &_re->i);
+			_re->i.infostr = NULL;
+		}
+	}
+
+	inline void progress(float i)
+	{
+		if (_re)
+			_re->progress(_re->prh, i);
+	}
+
 	inline bool testBreak()
 	{
 		return _re && _re->test_break(_re->tbh);
